// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CostAllocateFFP component renders correctly renders correctly in editable mode (standard) 1`] = `
<Fragment>
  <h2
    className="subsection--title ds-h2"
  >
    Budget and FFP
  </h2>
  <div
    key="1990"
  >
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTable"
      id="activity0-ffy1990"
    >
      <caption
        className="ds-h3"
      >
        Activity 
        1
         Budget for FFY 
        1990
      </caption>
      <tbody>
        <CostAllocationRows
          activityIndex={0}
          ffy="1990"
          otherFunding={
            Object {
              "2020": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
              "2021": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
            }
          }
          years={
            Object {
              "1990": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 2000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 2001,
                    "unitCost": 20,
                    "units": "20 hours",
                  },
                ],
                "contractorResourcesTotal": 1000,
                "federalPercent": 1001,
                "federalShare": 90,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 1002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 1003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 3000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 1004,
                "otherFunding": 1005,
                "statePercent": 10,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 4000,
                    "unitCost": 40,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 1006,
                "stateShare": 1007,
                "totalCost": 1008,
              },
              "1991": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 6000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 6001,
                    "unitCost": 60,
                    "units": "60 hours",
                  },
                ],
                "contractorResourcesTotal": 7000,
                "federalPercent": 7001,
                "federalShare": 50,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 8002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 7003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 9000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 7004,
                "otherFunding": 7005,
                "statePercent": 50,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 9000,
                    "unitCost": 90,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 7006,
                "stateShare": 7007,
                "totalCost": 7008,
              },
            }
          }
        />
      </tbody>
    </table>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTotalCostTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="2"
          >
            Activity Total Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              1008
            </Dollars>
          </td>
        </tr>
        <tr>
          <td
            className="title"
          >
            Other Funding
          </td>
          <td>
            -
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              1005
            </Dollars>
          </td>
        </tr>
        <tr
          className="budget-table--subtotal budget-table--row__highlight"
        >
          <td
            className="title"
          >
            Activity Total Computable Medicaid Cost
          </td>
          <td
            className="budget-table--number"
            colSpan="2"
          >
            <Dollars>
              1003
            </Dollars>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <Instruction
        args={null}
        headingDisplay={
          Object {
            "className": "ds-h4",
            "level": "p",
          }
        }
        labelFor={null}
        reverse={false}
        source="activities.costAllocate.ffp.federalStateSplitInstruction"
      />
      <Component
        control={
          Object {
            "_defaultValues": Object {
              "costAllocation": Object {
                "1990": Object {
                  "ffp": Object {
                    "federal": "90",
                    "state": "10",
                  },
                  "other": 100,
                },
                "1991": Object {
                  "ffp": Object {
                    "federal": "50",
                    "state": "50",
                  },
                  "other": 200,
                },
              },
            },
            "_executeSchema": [Function],
            "_fields": Object {},
            "_formState": Object {
              "dirtyFields": Object {},
              "errors": Object {},
              "isDirty": false,
              "isSubmitSuccessful": false,
              "isSubmitted": false,
              "isSubmitting": false,
              "isValid": false,
              "isValidating": false,
              "submitCount": 0,
              "touchedFields": Object {},
            },
            "_formValues": Object {
              "costAllocation": Object {
                "1990": Object {
                  "ffp": Object {
                    "federal": "90",
                    "state": "10",
                  },
                  "other": 100,
                },
                "1991": Object {
                  "ffp": Object {
                    "federal": "50",
                    "state": "50",
                  },
                  "other": 200,
                },
              },
            },
            "_getDirty": [Function],
            "_getFieldArray": [Function],
            "_getWatch": [Function],
            "_names": Object {
              "array": Set {},
              "mount": Set {},
              "unMount": Set {},
              "watch": Set {},
            },
            "_options": Object {
              "defaultValues": Object {
                "costAllocation": Object {
                  "1990": Object {
                    "ffp": Object {
                      "federal": "90",
                      "state": "10",
                    },
                    "other": 100,
                  },
                  "1991": Object {
                    "ffp": Object {
                      "federal": "50",
                      "state": "50",
                    },
                    "other": 200,
                  },
                },
              },
              "mode": "onBlur",
              "reValidateMode": "onBlur",
              "resolver": [Function],
              "shouldFocusError": true,
            },
            "_proxyFormState": Object {
              "dirtyFields": false,
              "errors": "all",
              "isDirty": false,
              "isValid": false,
              "isValidating": false,
              "touchedFields": false,
            },
            "_removeUnmounted": [Function],
            "_stateFlags": Object {
              "action": false,
              "mount": false,
              "watch": false,
            },
            "_subjects": Object {
              "array": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
              "state": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
              "watch": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
            },
            "_updateFieldArray": [Function],
            "_updateValid": [Function],
            "getFieldState": [Function],
            "register": [Function],
            "unregister": [Function],
          }
        }
        name="costAllocation"
        render={[Function]}
      />
    </div>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPFedStateSplitTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="5"
          >
            Total Computable Medicaid Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              1003
            </Dollars>
          </td>
        </tr>
        <CostSummaryRows
          items={
            Array [
              Object {
                "description": "Federal Share",
                "totalCost": 90,
                "unitCost": 1003,
                "units": "90%",
              },
              Object {
                "description": "State Share",
                "totalCost": 1007,
                "unitCost": 1003,
                "units": "10%",
              },
            ]
          }
        />
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <Instruction
        args={null}
        headingDisplay={
          Object {
            "className": "ds-h4",
            "level": "p",
          }
        }
        labelFor={null}
        reverse={false}
        source="activities.costAllocate.ffp.quarterlyFFPInstruction"
      />
      <Connect(CostAllocateFFPQuarterly)
        aKey="key"
        activityIndex={0}
        isViewOnly={false}
        year="1990"
      />
    </div>
  </div>
  <div
    key="1991"
  >
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTable"
      id="activity0-ffy1991"
    >
      <caption
        className="ds-h3"
      >
        Activity 
        1
         Budget for FFY 
        1991
      </caption>
      <tbody>
        <CostAllocationRows
          activityIndex={0}
          ffy="1991"
          otherFunding={
            Object {
              "2020": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
              "2021": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
            }
          }
          years={
            Object {
              "1990": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 2000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 2001,
                    "unitCost": 20,
                    "units": "20 hours",
                  },
                ],
                "contractorResourcesTotal": 1000,
                "federalPercent": 1001,
                "federalShare": 90,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 1002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 1003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 3000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 1004,
                "otherFunding": 1005,
                "statePercent": 10,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 4000,
                    "unitCost": 40,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 1006,
                "stateShare": 1007,
                "totalCost": 1008,
              },
              "1991": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 6000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 6001,
                    "unitCost": 60,
                    "units": "60 hours",
                  },
                ],
                "contractorResourcesTotal": 7000,
                "federalPercent": 7001,
                "federalShare": 50,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 8002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 7003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 9000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 7004,
                "otherFunding": 7005,
                "statePercent": 50,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 9000,
                    "unitCost": 90,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 7006,
                "stateShare": 7007,
                "totalCost": 7008,
              },
            }
          }
        />
      </tbody>
    </table>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTotalCostTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="2"
          >
            Activity Total Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              7008
            </Dollars>
          </td>
        </tr>
        <tr>
          <td
            className="title"
          >
            Other Funding
          </td>
          <td>
            -
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              7005
            </Dollars>
          </td>
        </tr>
        <tr
          className="budget-table--subtotal budget-table--row__highlight"
        >
          <td
            className="title"
          >
            Activity Total Computable Medicaid Cost
          </td>
          <td
            className="budget-table--number"
            colSpan="2"
          >
            <Dollars>
              7003
            </Dollars>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <Instruction
        args={null}
        headingDisplay={
          Object {
            "className": "ds-h4",
            "level": "p",
          }
        }
        labelFor={null}
        reverse={false}
        source="activities.costAllocate.ffp.federalStateSplitInstruction"
      />
      <Component
        control={
          Object {
            "_defaultValues": Object {
              "costAllocation": Object {
                "1990": Object {
                  "ffp": Object {
                    "federal": "90",
                    "state": "10",
                  },
                  "other": 100,
                },
                "1991": Object {
                  "ffp": Object {
                    "federal": "50",
                    "state": "50",
                  },
                  "other": 200,
                },
              },
            },
            "_executeSchema": [Function],
            "_fields": Object {},
            "_formState": Object {
              "dirtyFields": Object {},
              "errors": Object {},
              "isDirty": false,
              "isSubmitSuccessful": false,
              "isSubmitted": false,
              "isSubmitting": false,
              "isValid": false,
              "isValidating": false,
              "submitCount": 0,
              "touchedFields": Object {},
            },
            "_formValues": Object {
              "costAllocation": Object {
                "1990": Object {
                  "ffp": Object {
                    "federal": "90",
                    "state": "10",
                  },
                  "other": 100,
                },
                "1991": Object {
                  "ffp": Object {
                    "federal": "50",
                    "state": "50",
                  },
                  "other": 200,
                },
              },
            },
            "_getDirty": [Function],
            "_getFieldArray": [Function],
            "_getWatch": [Function],
            "_names": Object {
              "array": Set {},
              "mount": Set {},
              "unMount": Set {},
              "watch": Set {},
            },
            "_options": Object {
              "defaultValues": Object {
                "costAllocation": Object {
                  "1990": Object {
                    "ffp": Object {
                      "federal": "90",
                      "state": "10",
                    },
                    "other": 100,
                  },
                  "1991": Object {
                    "ffp": Object {
                      "federal": "50",
                      "state": "50",
                    },
                    "other": 200,
                  },
                },
              },
              "mode": "onBlur",
              "reValidateMode": "onBlur",
              "resolver": [Function],
              "shouldFocusError": true,
            },
            "_proxyFormState": Object {
              "dirtyFields": false,
              "errors": "all",
              "isDirty": false,
              "isValid": false,
              "isValidating": false,
              "touchedFields": false,
            },
            "_removeUnmounted": [Function],
            "_stateFlags": Object {
              "action": false,
              "mount": false,
              "watch": false,
            },
            "_subjects": Object {
              "array": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
              "state": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
              "watch": Object {
                "next": [Function],
                "observers": Array [],
                "subscribe": [Function],
                "unsubscribe": [Function],
              },
            },
            "_updateFieldArray": [Function],
            "_updateValid": [Function],
            "getFieldState": [Function],
            "register": [Function],
            "unregister": [Function],
          }
        }
        name="costAllocation"
        render={[Function]}
      />
    </div>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPFedStateSplitTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="5"
          >
            Total Computable Medicaid Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              7003
            </Dollars>
          </td>
        </tr>
        <CostSummaryRows
          items={
            Array [
              Object {
                "description": "Federal Share",
                "totalCost": 50,
                "unitCost": 7003,
                "units": "50%",
              },
              Object {
                "description": "State Share",
                "totalCost": 7007,
                "unitCost": 7003,
                "units": "50%",
              },
            ]
          }
        />
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <Instruction
        args={null}
        headingDisplay={
          Object {
            "className": "ds-h4",
            "level": "p",
          }
        }
        labelFor={null}
        reverse={false}
        source="activities.costAllocate.ffp.quarterlyFFPInstruction"
      />
      <Connect(CostAllocateFFPQuarterly)
        aKey="key"
        activityIndex={0}
        isViewOnly={false}
        year="1991"
      />
    </div>
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    FFY 
    1990
    -
    1991
     Totals
  </h3>
  <AllFFYsSummaryNarrative
    activityName="activity name"
    costAllocation={
      Object {
        "1990": Object {
          "ffp": Object {
            "federal": "90",
            "state": "10",
          },
          "other": 100,
        },
        "1991": Object {
          "ffp": Object {
            "federal": "50",
            "state": "50",
          },
          "other": 200,
        },
      }
    }
    costSummary={
      Object {
        "total": Object {
          "federalShare": 100,
          "medicaidShare": 200,
          "otherFunding": 300,
          "stateShare": 400,
          "totalCost": 500,
        },
        "years": Object {
          "1990": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 2000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 2001,
                "unitCost": 20,
                "units": "20 hours",
              },
            ],
            "contractorResourcesTotal": 1000,
            "federalPercent": 1001,
            "federalShare": 90,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 1002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 1003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 3000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 1004,
            "otherFunding": 1005,
            "statePercent": 10,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 4000,
                "unitCost": 40,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 1006,
            "stateShare": 1007,
            "totalCost": 1008,
          },
          "1991": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 6000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 6001,
                "unitCost": 60,
                "units": "60 hours",
              },
            ],
            "contractorResourcesTotal": 7000,
            "federalPercent": 7001,
            "federalShare": 50,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 8002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 7003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 9000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 7004,
            "otherFunding": 7005,
            "statePercent": 50,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 9000,
                "unitCost": 90,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 7006,
            "stateShare": 7007,
            "totalCost": 7008,
          },
        },
      }
    }
    stateName="test state"
  />
</Fragment>
`;

exports[`the CostAllocateFFP component renders correctly renders correctly in view-only mode 1`] = `
<Fragment>
  <hr
    className="custom-hr"
  />
  <div
    key="1990"
  >
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTable"
      id="activity0-ffy1990"
    >
      <caption
        className="ds-h3"
      >
        Activity 
        1
         Budget for FFY 
        1990
      </caption>
      <tbody>
        <CostAllocationRows
          activityIndex={0}
          ffy="1990"
          otherFunding={
            Object {
              "2020": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
              "2021": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
            }
          }
          years={
            Object {
              "1990": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 2000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 2001,
                    "unitCost": 20,
                    "units": "20 hours",
                  },
                ],
                "contractorResourcesTotal": 1000,
                "federalPercent": 1001,
                "federalShare": 90,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 1002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 1003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 3000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 1004,
                "otherFunding": 1005,
                "statePercent": 10,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 4000,
                    "unitCost": 40,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 1006,
                "stateShare": 1007,
                "totalCost": 1008,
              },
              "1991": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 6000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 6001,
                    "unitCost": 60,
                    "units": "60 hours",
                  },
                ],
                "contractorResourcesTotal": 7000,
                "federalPercent": 7001,
                "federalShare": 50,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 8002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 7003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 9000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 7004,
                "otherFunding": 7005,
                "statePercent": 50,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 9000,
                    "unitCost": 90,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 7006,
                "stateShare": 7007,
                "totalCost": 7008,
              },
            }
          }
        />
      </tbody>
    </table>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTotalCostTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="5"
          >
            Activity Total Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              1008
            </Dollars>
          </td>
        </tr>
        <tr
          className="title"
        >
          <td>
            Other Funding
          </td>
          <td
            colSpan="3"
          />
          <td>
            -
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              1005
            </Dollars>
          </td>
        </tr>
        <tr
          className="budget-table--subtotal budget-table--row__highlight"
        >
          <td>
            Activity Total Computable Medicaid Cost
          </td>
          <td
            colSpan="4"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              1003
            </Dollars>
          </td>
        </tr>
        <CostSummaryRows
          items={
            Array [
              Object {
                "description": "Federal Share",
                "totalCost": 90,
                "unitCost": 1003,
                "units": "90%",
              },
              Object {
                "description": "State Share",
                "totalCost": 1007,
                "unitCost": 1003,
                "units": "10%",
              },
            ]
          }
        />
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <h4>
        Estimated Quarterly Expenditure
      </h4>
      <Connect(CostAllocateFFPQuarterly)
        aKey="key"
        activityIndex={0}
        isViewOnly={true}
        year="1990"
      />
    </div>
  </div>
  <div
    key="1991"
  >
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTable"
      id="activity0-ffy1991"
    >
      <caption
        className="ds-h3"
      >
        Activity 
        1
         Budget for FFY 
        1991
      </caption>
      <tbody>
        <CostAllocationRows
          activityIndex={0}
          ffy="1991"
          otherFunding={
            Object {
              "2020": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
              "2021": Object {
                "contractors": 0,
                "expenses": 0,
                "statePersonnel": 0,
                "total": 0,
              },
            }
          }
          years={
            Object {
              "1990": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 2000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 2001,
                    "unitCost": 20,
                    "units": "20 hours",
                  },
                ],
                "contractorResourcesTotal": 1000,
                "federalPercent": 1001,
                "federalShare": 90,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 1002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 1003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 3000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 1004,
                "otherFunding": 1005,
                "statePercent": 10,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 4000,
                    "unitCost": 40,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 1006,
                "stateShare": 1007,
                "totalCost": 1008,
              },
              "1991": Object {
                "contractorResources": Array [
                  Object {
                    "description": "contractor 2.1",
                    "totalCost": 6000,
                    "unitCost": null,
                    "units": null,
                  },
                  Object {
                    "description": "contractor 2.2",
                    "totalCost": 6001,
                    "unitCost": 60,
                    "units": "60 hours",
                  },
                ],
                "contractorResourcesTotal": 7000,
                "federalPercent": 7001,
                "federalShare": 50,
                "keyPersonnel": Array [
                  Object {
                    "description": "key person (APD Key Personnel)",
                    "totalCost": 8002,
                    "unitCost": null,
                    "units": "100% time",
                  },
                ],
                "medicaidShare": 7003,
                "nonPersonnel": Array [
                  Object {
                    "description": "costly costs",
                    "totalCost": 9000,
                    "unitCost": null,
                    "units": null,
                  },
                ],
                "nonPersonnelTotal": 7004,
                "otherFunding": 7005,
                "statePercent": 50,
                "statePersonnel": Array [
                  Object {
                    "description": "personnel role",
                    "totalCost": 9000,
                    "unitCost": 90,
                    "units": "0.5 FTE",
                  },
                ],
                "statePersonnelTotal": 7006,
                "stateShare": 7007,
                "totalCost": 7008,
              },
            }
          }
        />
      </tbody>
    </table>
    <table
      className="budget-table activity-budget-table"
      data-cy="FFPActivityTotalCostTable"
    >
      <tbody>
        <tr
          className="budget-table--subtotal budget-table--row__header"
        >
          <th
            colSpan="5"
          >
            Activity Total Cost
          </th>
          <td
            className="budget-table--number"
          >
            <Dollars>
              7008
            </Dollars>
          </td>
        </tr>
        <tr
          className="title"
        >
          <td>
            Other Funding
          </td>
          <td
            colSpan="3"
          />
          <td>
            -
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              7005
            </Dollars>
          </td>
        </tr>
        <tr
          className="budget-table--subtotal budget-table--row__highlight"
        >
          <td>
            Activity Total Computable Medicaid Cost
          </td>
          <td
            colSpan="4"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              7003
            </Dollars>
          </td>
        </tr>
        <CostSummaryRows
          items={
            Array [
              Object {
                "description": "Federal Share",
                "totalCost": 50,
                "unitCost": 7003,
                "units": "50%",
              },
              Object {
                "description": "State Share",
                "totalCost": 7007,
                "unitCost": 7003,
                "units": "50%",
              },
            ]
          }
        />
      </tbody>
    </table>
    <div
      className="data-entry-box ds-u-margin-bottom--5"
    >
      <h4>
        Estimated Quarterly Expenditure
      </h4>
      <Connect(CostAllocateFFPQuarterly)
        aKey="key"
        activityIndex={0}
        isViewOnly={true}
        year="1991"
      />
    </div>
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    FFY 
    1990
    -
    1991
     Totals
  </h3>
  <AllFFYsSummaryNarrative
    activityName="activity name"
    costAllocation={
      Object {
        "1990": Object {
          "ffp": Object {
            "federal": "90",
            "state": "10",
          },
          "other": 100,
        },
        "1991": Object {
          "ffp": Object {
            "federal": "50",
            "state": "50",
          },
          "other": 200,
        },
      }
    }
    costSummary={
      Object {
        "total": Object {
          "federalShare": 100,
          "medicaidShare": 200,
          "otherFunding": 300,
          "stateShare": 400,
          "totalCost": 500,
        },
        "years": Object {
          "1990": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 2000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 2001,
                "unitCost": 20,
                "units": "20 hours",
              },
            ],
            "contractorResourcesTotal": 1000,
            "federalPercent": 1001,
            "federalShare": 90,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 1002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 1003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 3000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 1004,
            "otherFunding": 1005,
            "statePercent": 10,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 4000,
                "unitCost": 40,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 1006,
            "stateShare": 1007,
            "totalCost": 1008,
          },
          "1991": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 6000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 6001,
                "unitCost": 60,
                "units": "60 hours",
              },
            ],
            "contractorResourcesTotal": 7000,
            "federalPercent": 7001,
            "federalShare": 50,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 8002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 7003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 9000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 7004,
            "otherFunding": 7005,
            "statePercent": 50,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 9000,
                "unitCost": 90,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 7006,
            "stateShare": 7007,
            "totalCost": 7008,
          },
        },
      }
    }
    stateName="test state"
  />
</Fragment>
`;

exports[`the CostAllocateFFP component renders the budget and cost allocation summary narrative 1`] = `
<p>
  The total cost of the 
  <strong>
    activity
  </strong>
   activity is
   
  <strong>
    <Dollars>
      5
    </Dollars>
  </strong>
  . Because of other funding of
   
  <strong>
    <Dollars>
      3
    </Dollars>
  </strong>
  , the total computable Medicaid cost is
   
  <strong>
    <Dollars>
      2
    </Dollars>
  </strong>
  . This activity is using a 
  <strong>
    f/s (FFY 1, FFY 2, and FFY 3)
  </strong>
   
  funding split, resulting in a federal share of
   
  <strong>
    <Dollars>
      1
    </Dollars>
  </strong>
   
  and a 
  the state
   share of
   
  <strong>
    <Dollars>
      4
    </Dollars>
  </strong>
  .
</p>
`;

exports[`the CostAllocateFFP component renders the budget and cost allocation summary narrative 2`] = `
<p>
  The total cost of the 
  <strong>
    activity
  </strong>
   activity is
   
  <strong>
    <Dollars>
      5
    </Dollars>
  </strong>
  . Because of other funding of
   
  <strong>
    <Dollars>
      3
    </Dollars>
  </strong>
  , the total computable Medicaid cost is
   
  <strong>
    <Dollars>
      2
    </Dollars>
  </strong>
  . This activity is using a 
  <strong>
    f/s (FFY 1), ff/s (FFY 2), and f/s (FFY 3)
  </strong>
   
  funding split, resulting in a federal share of
   
  <strong>
    <Dollars>
      1
    </Dollars>
  </strong>
   
  and a 
  the state
   share of
   
  <strong>
    <Dollars>
      4
    </Dollars>
  </strong>
  .
</p>
`;

exports[`the CostAllocateFFP component renders the budget and cost allocation summary narrative 3`] = `
<p>
  The total cost of the 
  <strong>
    activity
  </strong>
   activity is
   
  <strong>
    <Dollars>
      5
    </Dollars>
  </strong>
  . Because of other funding of
   
  <strong>
    <Dollars>
      3
    </Dollars>
  </strong>
  , the total computable Medicaid cost is
   
  <strong>
    <Dollars>
      2
    </Dollars>
  </strong>
  . This activity is using a 
  <strong>
    f/s (FFY 1 and FFY 2) and ff/s (FFY 3)
  </strong>
   
  funding split, resulting in a federal share of
   
  <strong>
    <Dollars>
      1
    </Dollars>
  </strong>
   
  and a 
  the state
   share of
   
  <strong>
    <Dollars>
      4
    </Dollars>
  </strong>
  .
</p>
`;
